--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,25 @@
-.header {
+.content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  padding: 25px 71px 20px;
+  padding: 30px 71px 20px;
 
   border-bottom: 1px solid var(--border-color);
   box-sizing: border-box;
 }
 
-.header__nav {
+.actions {
   display: flex;
   gap: 50px;
+}
+
+@media (max-width: 576px) {
+  .content {
+    padding: 25px 9px 15px;
+  }
+
+  .actions {
+    gap: 10px;
+  }
 }
