--- a/src/components/ui/Title/Title.module.css
+++ b/src/components/ui/Title/Title.module.css
@@ -11,4 +11,19 @@
 .title--h2 {
   font-size: var(--font-size-sm);
   line-height: 24px;
+  letter-spacing: 0.1px;
+}
+
+@media (max-width: 1200px) {
+  .title--h1 {
+    font-size: var(--font-size-xl);
+    line-height: 50px;
+  }
+}
+
+@media (max-width: 576px) {
+  .title--h1 {
+    font-size: var(--font-size-lg);
+    line-height: 40px;
+  }
 }
