--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,9 +5,10 @@
   --border-color: #000000;
   --primary-accent-color: #FF685B;
   --second-accent-color: #E74040;
+  --shadow-color: #00000012;
 
   --font-size-xxl: 58px;
-  --font-size-xl: 42px;
+  --font-size-xl: 36px;
   --font-size-lg: 28px;
   --font-size-md: 20px;
   --font-size-sm: 16px;
